--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sparticuz/chromium-min": "^140.0.0",
     "next": "15.5.4",
+    "puppeteer-core": "^24.23.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
