--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "app/api/gas2/route.ts": {
+    "app/api/**": {
       "includeFiles": "node_modules/@sparticuz/chromium-min/bin/**"
     }
   }
