--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.83.0",
     "next": "15.5.4",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.296",
