--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.83.0",
-    "next": "15.5.4",
+    "next": "^16.1.6",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.296",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "twilio": "^5.10.2"
   },
   "devDependencies": {
